# pttbbs-backend

./: .gitignore  Makefile  README.en.md  README.zh-TW.md  go.mod  go.sum  main.go
api/: add_favorite_board_test.go  api.go  api_login_required.go  api_login_required_path.go  api_login_required_redirect_path.go  api_path.go  api_redirect.go  api_result.go  api_utils.go  article_utils.go  attempt_change_email.go  attempt_login.go  attempt_register_user.go  attempt_register_user_test.go  attempt_set_id_email.go  board_utils.go  board_utils_test.go  change_email.go  change_passwd.go  change_passwd_test.go  client_utils.go  const.go  create_article.go  create_article_test.go  create_board_test.go  create_comment_test.go  create_rank.go  cross_post.go  cross_post_test.go  delete_articles_test.go  delete_comments_test.go  edit_article_test.go  errors.go  get_article_blocks.go  get_article_blocks_test.go  get_article_detail.go  get_article_detail_test.go  get_board_detail_test.go  get_board_summary_test.go  get_man_article_blocks.go  (+32 more)
apidoc/: add_favorite_board.yaml  add_favorite_folder.yaml  add_favorite_line.yaml  apidoc.all_guest.py  apidoc.full.py  apidoc.py  attempt_change_email.yaml  attempt_register_user.yaml  attempt_set_id_email.yaml  change_email.yaml  change_passwd.yaml  delete_favorite.yaml  get_user_info.yaml  get_user_summary.yaml  load_favorite_boards.yaml  load_user_articles.yaml  load_user_comments.yaml  pyproject.toml  set_id_email.yaml  template.yaml
apidoc/defs/: user_detail_core.yaml
apitypes/: errors.go  utils.go  utils_test.go
db/: 00-config.go  (+6 more)
(+80 files in other folders)
