[build-system]
requires = [
    'setuptools',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'pttbbs-backend'
version = '0.43.3'
description = ''
readme = 'README.md'
authors = [
    {name = 'Chuan-Heng Hsiao', email = 'hsiao.chuanheng@gmail.com'},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
    'PyYAML==6.0.3',
    'Flask==3.1.3',
    'flask-swagger @ git+https://github.com/chhsiao1981/flask-swagger.git@importlib.metadata#egg=flask-swagger',
]

[project.scripts]
apidoc = 'apidoc.apidoc:app'

[tool.setuptools.packages.find]
include = [
    'apidoc',
]
exclude = [
    'tests*',
]
